--- a/mantrapushpam.html
+++ b/mantrapushpam.html
@@ -79,7 +79,7 @@ p {
                                     <br/>
                                     <br/>
                                 </h1>
-								<p><a href="/Users/KLU21/Desktop/my/index.html" class="btn btn-secondary me-2">శ్రీలలితా</a></p>
+								<p><a href="index.html" class="btn btn-secondary me-2">శ్రీలలితా</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
