--- a/mantrapushpam.html
+++ b/mantrapushpam.html
@@ -8,7 +8,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="https://qph.cf2.quoracdn.net/main-qimg-1cd2bab019067a023cc7c49f61ab191e-lq">
