--- a/mantrapushpam.html
+++ b/mantrapushpam.html
@@ -98,44 +98,200 @@ p {
 			<br/>
 
 <h1>మంత్రపుష్పం</h1>
-యో॑ఽపాం పుష్పం॒-వేఀద॑ పుష్ప॑వాన్ ప్ర॒జావా᳚న్ పశు॒మాన్ భ॑వతి । చం॒ద్రమా॒ వా అ॒పాం పుష్పం᳚ । పుష్ప॑వాన్ ప్ర॒జావా᳚న్ పశు॒మాన్ భ॑వతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
 
-అ॒గ్నిర్వా అ॒పామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । యో᳚ఽగ్నేరా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒వా అ॒గ్నేరా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
-
-వా॒యుర్వా అ॒పామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । యో వా॒యోరా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒ వై వా॒యోరా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
-
-అ॒సౌ వై తప॑న్న॒పామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । యో॑ఽముష్య॒తప॑త ఆ॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒ వా అ॒ముష్య॒తప॑త ఆ॒యత॑నమ్ ।ఆ॒యత॑నవాన్ భవతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
-
-చం॒ద్రమా॒ వా అ॒పామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । యశ్చం॒ద్రమ॑స ఆ॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒ వై చం॒ద్రమ॑స ఆ॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
-
-నక్షత్ర॑త్రాణి॒ వా అ॒పామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । యో నక్షత్ర॑త్రాణామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒ వై నక్ష॑త్రాణామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
-
-ప॒ర్జన్యో॒ వా అ॒పామా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । యః ప॒ర్జన్య॑స్యా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒ వై ప॒ర్జన్య॑స్యా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । య ఏ॒వం-వేఀద॑ । యో॑ఽపామా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి ।
-
-సం॒​వఀ॒త్స॒రో వా అ॒పామా॒యత॑న॒మ్ । ఆ॒యత॑నవాన్ భవతి । యః సం॑​వఀత్స॒రస్యా॒యత॑నం॒-వేఀద॑ । ఆ॒యత॑నవాన్ భవతి । ఆపో॒ వై సం॑​వఀత్స॒రస్యా॒యత॑నమ్ । ఆ॒యత॑నవాన్ భవతి । య ఏవం-వేఀద॑ । యో᳚ఽఫ్సు నావం॒ ప్రతి॑ష్ఠితాం॒-వేఀద॑ । ప్రత్యే॒వ తి॑ష్ఠతి ।
-
-ఓం రా॒జా॒ధి॒రా॒జాయ॑ ప్రసహ్య సా॒హినే᳚ । నమో॑ వ॒యం-వైఀ᳚శ్రవ॒ణాయ॑ కుర్మహే । స మే॒ కామా॒న్ కామ॒ కామా॑య॒ మహ్యం᳚ । కా॒మే॒శ్వ॒రో వై᳚శ్రవ॒ణో ద॑దాతు । కు॒బే॒రాయ॑ వైశ్రవ॒ణాయ॑ । మ॒హా॒రాజాయ॒ నమః॑ ।
-
-ఓం᳚ తద్బ్ర॒హ్మ । ఓం᳚ తద్వా॒యుః । ఓం᳚ తదా॒త్మా ।
-ఓం᳚ తథ్స॒త్యమ్ । ఓం᳚ తత్సర్వం᳚ । ఓం᳚ తత్పురో॒ర్నమః ॥
-
-అంతశ్చరతి॑ భూతే॒షు గుహాయాం-విఀ ॑శ్వమూ॒ర్తిషు ।
-త్వం-యఀజ్ఞస్త్వం-వఀషట్కారస్త్వ-మింద్రస్త్వగ్ం
-రుద్రస్త్వం-విఀష్ణుస్త్వం బ్రహ్మత్వం॑ ప్రజా॒పతిః ।
-త్వం త॑దాప॒ ఆపో॒ జ్యోతీ॒రసో॒ఽమృతం బ్రహ్మ॒ భూర్భువ॒స్సువ॒రోమ్ ।
-
-ఈశానస్సర్వ॑ విద్యా॒నామీశ్వరస్సర్వ॑భూతా॒నాం
-బ్రహ్మాధి॑పతి॒-ర్బ్రహ్మ॒ణోఽధి॑పతి॒-ర్బ్రహ్మా॑ శి॒వో మే॑ అస్తు సదాశి॒వోమ్ ।
-
-తద్విష్ణోః᳚ పర॒మం ప॒దగ్ం సదా॑ పశ్యంతి సూ॒రయః॑ । ది॒వీవ॒ చక్షు॒రాత॑తమ్ । తద్విప్రా॑సో విప॒న్యవో॑ జాగృ॒వాగ్ం సస్సమిం॑ధతే । విష్నో॒ర్యత్ప॑ర॒మం ప॒దమ్ ।
-
-ఋతగ్ం స॒త్యం ప॑రం బ్ర॒హ్మ॒ పు॒రుషం॑ కృష్ణ॒పింగ॑లమ్ ।
-ఊ॒ర్ధ్వరే॑తం-విఀ ॑రూపా॒క్షం॒-విఀ॒శ్వరూ॑పాయ॒ వై నమో॒ నమః॑ ॥
-
-ఓం నా॒రా॒య॒ణాయ॑ వి॒ద్మహే॑ వాసుదే॒వాయ॑ ధీమహి ।
-తన్నో॑ విష్ణుః ప్రచో॒దయా᳚త్ ॥
-
-ఓం శాంతిః॒ శాంతిః॒ శాంతిః॑ ।
+<p>
+	ధా॒తా పు॒రస్తా॒ద్యము॑దాజ॒హార॑ |<br/>
+	శ॒క్రః ప్రవి॒ద్వాన్ప్ర॒దిశ॒శ్చత॑స్రః |<br/>
+	తమే॒వం వి॒ద్వాన॒మృత॑ ఇ॒హ భ॑వతి |<br/>
+	నాన్యః పన్థా॒ అయ॑నాయ విద్యతే |<br/><br/>
+	
+	ఓం స॒హ॒స్ర॒శీ॑ర్షం దే॒వ॒o వి॒శ్వాక్ష॑o వి॒శ్వశ॑మ్భువమ్ |<br/>
+	విశ్వ॑o నా॒రాయ॑ణం దే॒వ॒మ॒క్షర॑o పర॒మం ప॒దమ్ |<br/><br/>
+	
+	
+	వి॒శ్వత॒: పర॑మాన్ని॒త్య॒o వి॒శ్వం నా॑రాయ॒ణగ్ం హ॑రిమ్ |<br/>
+	విశ్వ॑మే॒వేదం పురు॑ష॒స్తద్విశ్వ॒ముప॑జీవతి |<br/><br/>
+	
+	పతి॒o విశ్వ॑స్యా॒త్మేశ్వ॑ర॒గ్॒o శాశ్వ॑తగ్ం శి॒వమ॑చ్యుతమ్ |<br/>
+	నా॒రాయ॒ణం మ॑హాజ్ఞే॒య॒o వి॒శ్వాత్మా॑నం ప॒రాయ॑ణమ్ |<br/><br/>
+	
+	నా॒రాయ॒ణః ప॑రో జ్యో॒తి॒రా॒త్మా నా॑రాయ॒ణః ప॑రః |<br/>
+	నా॒రాయ॒ణః ప॑రం బ్ర॒హ్మ॒ త॒త్త్వం నా॑రాయ॒ణః ప॑రః |<br/><br/>
+	
+	నా॒రాయ॒ణః ప॑రో ధ్యా॒తా॒ ధ్యా॒నం నా॑రాయ॒ణః ప॑రః |<br/>
+	యచ్చ॑ కి॒ఞ్చిజ్జ॑గత్స॒ర్వ॒o దృ॒శ్యతే” శ్రూయ॒తేఽపి॑ వా ||<br/><br/>
+	
+	
+	అన్త॑ర్బ॒హిశ్చ॑ తత్స॒ర్వ॒o వ్యా॒ప్య నా॑రాయ॒ణః స్థి॑తః |<br/>
+	అన॑న్త॒మవ్య॑యం క॒విగ్ం స॑ము॒ద్రేఽన్త॑o వి॒శ్వశ॑మ్భువమ్ |<br/><br/>
+	
+	ప॒ద్మ॒కో॒శ ప్ర॑తీకా॒శ॒గ్॒o హృ॒దయ॑o చాప్య॒ధోము॑ఖమ్ |<br/>
+	అధో॑ ని॒ష్ట్యా వి॑తస్త్యా॒న్తే॒ నా॒భ్యాము॑పరి॒ తిష్ఠ॑తి |<br/><br/>
+	
+	జ్వా॒ల॒మా॒లాకు॑లం భా॒తీ॒ వి॒శ్వస్యా॑యత॒నం మ॑హత్ |<br/>
+	సన్త॑తగ్ం సి॒రాభి॑స్తు॒ లంబ॑త్యాకోశ॒సన్ని॑భమ్ |<br/><br/>
+	
+	తస్యాన్తే॑ సుషి॒రగ్ం సూ॒క్ష్మం తస్మిన్” స॒ర్వం ప్రతి॑ష్ఠితమ్ |<br/>
+	తస్య॒ మధ్యే॑ మ॒హాన॑గ్నిర్వి॒శ్వార్చి॑ర్వి॒శ్వతో॑ముఖః |<br/><br/>
+	
+	సోఽగ్ర॑భు॒గ్విభ॑జన్తి॒ష్ఠ॒న్నాహా॑రమజ॒రః క॒విః |<br/>
+	తి॒ర్య॒గూ॒ర్ధ్వమ॑ధశ్శా॒యీ॒ ర॒శ్మయ॑స్తస్య॒ సన్త॑తా |<br/><br/>
+	
+	స॒న్తా॒పయ॑తి స్వం దే॒హమాపా॑దతల॒మస్త॑కః |<br/>
+	తస్య॒ మధ్యే॒ వహ్ని॑శిఖా అ॒ణీయో”ర్ధ్వా వ్య॒వస్థి॑తా |<br/><br/>
+	
+	నీ॒లతో॑యద॑మధ్య॒స్థా॒ వి॒ద్యుల్లే॑ఖేవ॒ భాస్వ॑రా |<br/>
+	నీ॒వార॒శూక॑వత్త॒న్వీ॒ పీ॒తా భా”స్వత్య॒ణూప॑మా |<br/><br/>
+	
+	
+	తస్యా”: శిఖా॒యా మ॑ధ్యే ప॒రమా”త్మా వ్య॒వస్థి॑తః |<br/>
+	స బ్రహ్మ॒ స శివ॒: (స హరి॒:) సేన్ద్ర॒: సోఽక్ష॑రః పర॒మః స్వ॒రాట్ ||<br/><br/>
+	
+	యో॑ఽపాం పుష్ప॒o వేద॑ |<br/>
+	పుష్ప॑వాన్ ప్ర॒జావా”న్ పశు॒మాన్ భ॑వతి |<br/><br/>
+	
+	చ॒న్ద్రమా॒ వా అ॒పాం పుష్పమ్” |<br/>
+	పుష్ప॑వాన్ ప్ర॒జావా”న్ పశు॒మాన్ భ॑వతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	అ॒గ్నిర్వా అ॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యో”ఽగ్నేరా॒యత॑న॒o వేద॑ || ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వా అ॒గ్నేరా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	వా॒యుర్వా అ॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యో వా॒యోరా॒యత॑న॒o వేద॑ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వై వా॒యోరా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	
+	అ॒సౌ వై తప॑న్న॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యో॑ఽముష్య॒ తప॑త ఆ॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వా అ॒ముష్య॒ తప॑త ఆ॒యత॑నమ్ ||<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	చ॒న్ద్రమా॒ వా అ॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యశ్చ॒న్ద్రమ॑స ఆ॒యత॑న॒o వేద॑ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వై చ॒న్ద్రమ॑స ఆ॒యత॑నమ్| ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	నక్ష॑త్రాణి॒ వా అ॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యో నక్ష॑త్రాణామా॒యత॑న॒o వేద॑ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వై నక్ష॑త్రాణామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	ప॒ర్జన్యో॒ వా అ॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యః ప॒ర్జన్య॑స్యా॒యత॑న॒o వేద॑ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వై ప॒ర్జన్య॑స్యా॒ఽఽయత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో॑ఽపామా॒యత॑న॒o వేద॑ |<br/>
+	ఆ॒యత॑నవాన్ భవతి |<br/><br/>
+	
+	
+	స॒oవ॒త్స॒రో వా అ॒పామా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	యస్సం॑వత్స॒రస్యా॒యత॑న॒o వేద॑ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	ఆపో॒ వై సం॑వత్స॒రస్యా॒యత॑నమ్ | ఆ॒యత॑నవాన్ భవతి |<br/>
+	య ఏ॒వం వేద॑ | యో”ఽప్సు నావ॒o ప్రతి॑ష్ఠితా॒o వేద॑ |<br/>
+	ప్రత్యే॒వ తి॑ష్ఠతి ||<br/><br/>
+	
+	కిం తద్విష్ణోర్బలమాహుః కా దీప్తిః కిం పరాయణం<br/>
+	ఏకో యద్ధారయద్దేవః రేజతీ రోదసీ ఉభే<br/>
+	వాతాద్విష్ణోర్బలమాహుః అక్షరాద్దీప్తిరుచ్యతే<br/>
+	త్రిపదాద్ధారయద్దేవః యద్విష్ణోరేకముత్తమం |<br/><br/>
+	
+	
+	ఓం రా॒జా॒ధి॒రా॒జాయ॑ ప్రసహ్యసా॒హినే” |<br/>
+	నమో॑ వ॒యం వై”శ్రవ॒ణాయ॑ కుర్మహే |<br/>
+	స మే॒ కామా॒న్కామ॒కామా॑య॒ మహ్యమ్” |<br/>
+	కా॒మే॒శ్వ॒రో వై”శ్రవ॒ణో ద॑దాతు |<br/>
+	కు॒బే॒రాయ॑ వైశ్రవ॒ణాయ॑ |<br/>
+	మ॒హా॒రా॒జాయ॒ నమ॑: ||<br/><br/>
+	
+	
+	ఓ”o తద్బ్ర॒హ్మ ఓ”o తద్వా॒యుః ఓ”o తదా॒త్మా
+	ఓ”o తత్స॒త్యం ఓ”o తత్సర్వమ్” ఓ”o తత్పురో॒ర్నమ॑: |<br/>
+	
+	అంతశ్చరతి॑ భూతే॒షు॒ గు॒హాయాం వి॑శ్వమూ॒ర్తిషు |<br/>
+	
+	త్వం యజ్ఞస్త్వం వషట్కారస్త్వమిన్ద్రస్త్వగ్ం రుద్రస్త్వం
+	విష్ణుస్త్వం బ్రహ్మ త్వ॑o ప్రజా॒పతిః |<br/>
+	
+	త్వం త॑దాప॒ ఆపో॒ జ్యోతీ॒ రసో॒ఽమృత॒o
+	బ్రహ్మ॒ భూర్భువ॒స్సువ॒రోమ్ ||<br/>
+	
+	ఈశానః సర్వ॑విద్యా॒నా॒మీశ్వరః సర్వ॑భూతా॒నా॒o బ్రహ్మాఽధి॑పతి॒ర్బ్రహ్మ॒ణోఽధి॑పతి॒ర్బ్రహ్మా॑ శి॒వో మే॑ అస్తు సదాశి॒వోమ్ ||<br/>
+	
+	
+	ఋ॒తగ్ం స॒త్యం ప॑రం బ్ర॒హ్మ॒ పు॒రుష॑o కృష్ణ॒పిఙ్గ॑లమ్ |<br/>
+	ఊ॒ర్ధ్వరే॑తం వి॑రూపా॒క్ష॒o వి॒శ్వరూ॑పాయ॒ వై నమో॒ నమ॑: |<br/><br/>
+	
+	ఓం నా॒రా॒య॒ణాయ॑ వి॒ద్మహే॑ వాసుదే॒వాయ॑ ధీమహి |
+	తన్నో॑ విష్ణుః ప్రచో॒దయా”త్ ||<br/>
+	
+	మ॒హా॒దే॒వ్యై చ॑ వి॒ద్మహే॑ విష్ణుప॒త్నీ చ॑ ధీమహి |
+	తన్నో॑ లక్ష్మీః ప్రచో॒దయా”త్ ||<br/>
+	
+	
+	
+	ఓం తత్పురు॑షాయ వి॒ద్మహే॑ మహాదే॒వాయ॑ ధీమహి |
+	తన్నో॑ రుద్రః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం తత్పురు॑షాయ వి॒ద్మహే॑ వక్రతు॒ణ్డాయ॑ ధీమహి |
+	తన్నో॑ దన్తిః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం తత్పురు॑షాయ వి॒ద్మహే॑ చక్రతు॒ణ్డాయ॑ ధీమహి |
+	తన్నో॑ నన్దిః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం తత్పురు॑షాయ వి॒ద్మహే॑ మహాసే॒నాయ॑ ధీమహి |
+	తన్నః షణ్ముఖః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం తత్పురు॑షాయ వి॒ద్మహే॑ సువర్ణప॒క్షాయ॑ ధీమహి |
+	తన్నో॑ గరుడః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం వే॒దా॒త్మ॒నాయ॑ వి॒ద్మహే॑ హిరణ్యగ॒ర్భాయ॑ ధీమహి |
+	తన్నో॑ బ్రహ్మ ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం నా॒రా॒య॒ణాయ॑ వి॒ద్మహే॑ వాసుదే॒వాయ॑ ధీమహి |
+	తన్నో॑ విష్ణుః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం వ॒జ్ర॒న॒ఖాయ॑ వి॒ద్మహే॑ తీక్ష్ణద॒గ్ంష్ట్రాయ॑ ధీమహి |
+	తన్నో॑ నారసిగ్ంహః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం భా॒స్క॒రాయ॑ వి॒ద్మహే॑ మహద్ద్యుతిక॒రాయ॑ ధీమహి |
+	తన్నో॑ ఆదిత్యః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం వై॒శ్వా॒న॒రాయ॑ వి॒ద్మహే॑ లాలీ॒లాయ ధీమహి |
+	తన్నో॑ అగ్నిః ప్రచో॒దయా”త్ ||<br/>
+	
+	ఓం కా॒త్యా॒య॒నాయ॑ వి॒ద్మహే॑ కన్యకు॒మారి॑ ధీమహి |
+	తన్నో॑ దుర్గిః ప్రచో॒దయా”త్ ||
+	
+	స॒హ॒స్ర॒పర॑మా దే॒వీ॒ శ॒తమూ॑లా శ॒తాఙ్కు॑రా |
+	స॒ర్వగ్ంహరతు॑ మే పా॒ప॒o దూ॒ర్వా దు॑:స్వప్న॒నాశి॑నీ ||<br/>
+	
+	ఆకాశాత్పతితం తోయం యథా గచ్ఛతి సాగరం |
+	సర్వదేవ నమస్కారః కేశవం ప్రతిగచ్ఛతి ||
+	<br/>
+	లక్ష్మీం క్షీర సముద్ర రాజ తనయాం శ్రీరంగ ధామేశ్వరీం
+	దాసీ భూత సమస్త దేవ వనితాం లోకైక దీపాంకురాం
+	శ్రీ మన్మంద కటాక్ష లబ్ధ విభవత్ బ్రహ్మేంద్ర గంగాధరాం
+	త్వాం త్రైలోక్య కుటుంబినీం సరసిజాం వందే ముకుంద ప్రియాం<br/>
+	సిద్ధలక్ష్మి మోక్షలక్ష్మి జయలక్ష్మి సరస్వతి
+	శ్రీలక్ష్మి వరలక్ష్మిశ్చ ప్రసన్నా మమ సర్వదా<br/>
+	వరాంకుశౌ పాశ మభీతిముద్రాం కరేర్వహంతీం కమలాసనస్తాం
+	
+	బాలార్క కోటి ప్రతిభాం త్రినేత్రాం భజేహమాంబాం జగదీశ్వరీం తాం<br/>
+	సర్వమంగళ మాంగళ్యే శివే సర్వార్థ సాధికే
+	శరణ్యే త్రంబకే దేవీ నారాయణి నమోస్తుతే<br/>
+	ఓం శాన్తిః శాన్తిః శాన్తిః ||
+	</p>
 
 
 		</div>
