--- a/kadhgamalla.html
+++ b/kadhgamalla.html
@@ -162,7 +162,8 @@ p {
 <br/>
 మహామహేశ్వరీ, మహామహారాజ్ఞీ, మహామహాశక్తే, మహామహాగుప్తే, మహామహాజ్ఞప్తే, మహామహానందే, 
 <br/>మహామహాస్కంధే, మహామహాశయే, మహామహా శ్రీచక్రనగరసామ్రాజ్ఞీ, నమస్తే నమస్తే నమస్తే నమః |
-</p>	
+</p>
+<embed src="files/kadhgamalla.pdf" type="application/pdf" width="100%" height="600px" />
 
 		</div>
 	</center>
