--- a/kadhgamalla.html
+++ b/kadhgamalla.html
@@ -24,6 +24,7 @@
 		<title>SriLalitha</title>
 	</head>
 <style>
+	
 
 	.entry-content p {
     padding-bottom: 10px;
@@ -31,7 +32,14 @@
 p {
     margin: 0 0 10px;
 	font-size: medium;
+	line-height: 1.5cm;
 }
+
+embed {
+      width: 100vw;
+      height: 100vh;
+      
+    }
 </style>
 	<body>
 
@@ -98,72 +106,9 @@ p {
 			<br/>
 
 <h1>శ్రీ దేవి ఖడ్గమాలా స్తోత్రం</h1>
-<p>
-    ఓం ఐం హ్రీం శ్రీం ఐం క్లీం సౌః ఓం నమస్త్రిపురసుందరీ,
 
-<br/>
-హృదయదేవీ, శిరోదేవీ, శిఖాదేవీ, కవచదేవీ, నేత్రదేవీ, అస్త్రదేవీ,
 
-కామేశ్వరీ, భగమాలినీ, నిత్యక్లిన్నే, భేరుండే, వహ్నివాసినీ, మహావజ్రేశ్వరీ,
-<br/>
-శివదూతీ, త్వరితే, కులసుందరీ, నిత్యే, నీలపతాకే, విజయే, సర్వమంగళే, 
-<br/>జ్వాలామాలినీ, చిత్రే, మహానిత్యే,
-
-<br/>
-పరమేశ్వర, పరమేశ్వరీ, మిత్రేశమయీ, ఉడ్డీశమయీ, చర్యానాథమయీ,
-<br/> లోపాముద్రమయీ, అగస్త్యమయీ,
-
-<br/>
-కాలతాపశమయీ, ధర్మాచార్యమయీ, ముక్తకేశీశ్వరమయీ, దీపకలానాథమయీ,
-
-<br/>
-విష్ణుదేవమయీ, ప్రభాకరదేవమయీ, తేజోదేవమయీ, మనోజదేవమయి, 
-<br/>కళ్యాణదేవమయీ, వాసుదేవమయీ, రత్నదేవమయీ, శ్రీరామానందమయీ,
-
-<br/>
-అణిమాసిద్ధే, లఘిమాసిద్ధే, గరిమాసిద్ధే, మహిమాసిద్ధే, ఈశిత్వసిద్ధే, వశిత్వసిద్ధే, ప్రాకామ్యసిద్ధే,
-<br/> భుక్తిసిద్ధే, ఇచ్ఛాసిద్ధే, ప్రాప్తిసిద్ధే, సర్వకామసిద్ధే, బ్రాహ్మీ, మాహేశ్వరీ, కౌమారి, వైష్ణవీ, వారాహీ,
-<br/> మాహేంద్రీ, చాముండే, మహాలక్ష్మీ, సర్వసంక్షోభిణీ, సర్వవిద్రావిణీ, సర్వాకర్షిణీ, సర్వవశంకరీ, 
-<br/>సర్వోన్మాదినీ, సర్వమహాంకుశే, సర్వఖేచరీ, సర్వబీజే, సర్వయోనే, సర్వత్రిఖండే, త్రైలోక్యమోహన చక్రస్వామినీ, ప్రకటయోగినీ,
-<br/>
-కామాకర్షిణీ, బుద్ధ్యాకర్షిణీ, అహంకారాకర్షిణీ, శబ్దాకర్షిణీ, స్పర్శాకర్షిణీ, రూపాకర్షిణీ, రసాకర్షిణీ, గంధాకర్షిణీ, 
-<br/>చిత్తాకర్షిణీ, ధైర్యాకర్షిణీ, స్మృత్యాకర్షిణీ, నామాకర్షిణీ, బీజాకర్షిణీ, ఆత్మాకర్షిణీ, అమృతాకర్షిణీ, 
-<br/>శరీరాకర్షిణీ, సర్వాశాపరిపూరక చక్రస్వామినీ, గుప్తయోగినీ,
-
-<br/>
-అనంగకుసుమే, అనంగమేఖలే, అనంగమదనే, అనంగమదనాతురే, అనంగరేఖే, అనంగవేగినీ, 
-<br/>అనంగాంకుశే, అనంగమాలినీ, సర్వసంక్షోభణచక్రస్వామినీ, గుప్తతరయోగినీ,
-<br/>
-సర్వసంక్షోభిణీ, సర్వవిద్రావినీ, సర్వాకర్షిణీ, సర్వహ్లాదినీ, సర్వసమ్మోహినీ, సర్వస్తంభినీ, సర్వజృంభిణీ,
-<br/> సర్వవశంకరీ, సర్వరంజనీ, సర్వోన్మాదినీ, సర్వార్థసాధికే, సర్వసంపత్తిపూరిణీ, సర్వమంత్రమయీ, 
-<br/>సర్వద్వంద్వక్షయంకరీ, సర్వసౌభాగ్యదాయక చక్రస్వామినీ, సంప్రదాయయోగినీ,
-
-<br/>
-సర్వసిద్ధిప్రదే, సర్వసంపత్ప్రదే, సర్వప్రియంకరీ, సర్వమంగళకారిణీ, సర్వకామప్రదే, సర్వదుఃఖవిమోచనీ, 
-<br/>సర్వమృత్యుప్రశమని, సర్వవిఘ్ననివారిణీ, సర్వాంగసుందరీ, సర్వసౌభాగ్యదాయినీ, సర్వార్థసాధక చక్రస్వామినీ, కులోత్తీర్ణయోగినీ,
-
-<br/>
-సర్వజ్ఞే, సర్వశక్తే, సర్వైశ్వర్యప్రదాయినీ, సర్వజ్ఞానమయీ, సర్వవ్యాధివినాశినీ, సర్వాధారస్వరూపే, సర్వపాపహరే,
-<br/> సర్వానందమయీ, సర్వరక్షాస్వరూపిణీ, సర్వేప్సితఫలప్రదే, సర్వరక్షాకరచక్రస్వామినీ, నిగర్భయోగినీ,
-
-<br/>
-వశినీ, కామేశ్వరీ, మోదినీ, విమలే, అరుణే, జయినీ, సర్వేశ్వరీ, కౌళిని, సర్వరోగహరచక్రస్వామినీ, రహస్యయోగినీ,
-
-<br/>
-బాణినీ, చాపినీ, పాశినీ, అంకుశినీ, మహాకామేశ్వరీ, మహావజ్రేశ్వరీ, మహాభగమాలినీ, 
-<br/>సర్వసిద్ధిప్రదచక్రస్వామినీ, అతిరహస్యయోగినీ,
-<br/>
-శ్రీ శ్రీ మహాభట్టారికే, సర్వానందమయచక్రస్వామినీ, పరాపరరహస్యయోగినీ,
-
-<br/>
-త్రిపురే, త్రిపురేశీ, త్రిపురసుందరీ, త్రిపురవాసినీ, త్రిపురాశ్రీః, త్రిపురమాలినీ, 
-<br/>త్రిపురసిద్ధే, త్రిపురాంబా, మహాత్రిపురసుందరీ,
-
-<br/>
-మహామహేశ్వరీ, మహామహారాజ్ఞీ, మహామహాశక్తే, మహామహాగుప్తే, మహామహాజ్ఞప్తే, మహామహానందే, 
-<br/>మహామహాస్కంధే, మహామహాశయే, మహామహా శ్రీచక్రనగరసామ్రాజ్ఞీ, నమస్తే నమస్తే నమస్తే నమః |
-</p>
-<embed src="files/kadhgamalla.pdf" type="application/pdf" width="100%" height="600px" />
+<embed src="https://srikanth30510.github.io/kadgamalla/kadhgamalla.pdf" type="application/pdf" width="100%" height="100%"/>
 
 		</div>
 	</center>
