--- a/lalithashasranama.html
+++ b/lalithashasranama.html
@@ -27,10 +27,16 @@
 
 	.entry-content p {
     padding-bottom: 10px;
+	overflow: auto;
 }
 p {
     margin: 0 0 10px;
 	font-size: medium;
+	line-height: 2cm;
+	
+}
+.content-section p{
+	overflow: auto;
 }
 </style>
 	<body>
@@ -56,10 +62,10 @@ p {
 						<li><a class="nav-link" href="#"></a></li>
 					</ul>
 
-					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+					<!-- <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
 						<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
 						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 				
@@ -104,6 +110,7 @@ p {
 ఉద్యద్భానుసహస్రాభా చతుర్బాహుసమన్వితా |<br/>
 రాగస్వరూపపాశాఢ్యా క్రోధాకారాంకుశోజ్జ్వలా || ౨ ||
 </p>
+<p>
 మనోరూపేక్షుకోదండా పంచతన్మాత్రసాయకా |<br/>
 నిజారుణప్రభాపూరమజ్జద్బ్రహ్మాండమండలా || ౩ ||
 </p><p>
