--- a/mantrapushpam.html
+++ b/mantrapushpam.html
@@ -31,6 +31,7 @@
 p {
     margin: 0 0 10px;
 	font-size: medium;
+	line-height: 2cm;
 }
 </style>
 	<body>
@@ -100,8 +101,8 @@ p {
 <h1>మంత్రపుష్పం</h1>
 
 <p>
-	ధా॒తా పు॒రస్తా॒ద్యము॑దాజ॒హార॑ |<br/>
-	శ॒క్రః ప్రవి॒ద్వాన్ప్ర॒దిశ॒శ్చత॑స్రః |<br/>
+	ధా॒తా పు॒రస్తా॒ద్యము॑దాజ॒హార॑ |<br/><br>
+	శ॒క్రః ప్రవి॒ద్వాన్ప్ర॒దిశ॒శ్చత॑స్రః |<br/><br>
 	తమే॒వం వి॒ద్వాన॒మృత॑ ఇ॒హ భ॑వతి |<br/>
 	నాన్యః పన్థా॒ అయ॑నాయ విద్యతే |<br/><br/>
 	
