--- a/kadhgamalla.html
+++ b/kadhgamalla.html
@@ -108,7 +108,7 @@ embed {
 <h1>శ్రీ దేవి ఖడ్గమాలా స్తోత్రం</h1>
 
 
-<embed src="https://srikanth30510.github.io/kadgamalla/kadhgamalla.pdf" type="application/pdf" width="100%" height="100%"/>
+<embed src="https://github.com/srikanth30510/static/blob/main/kadhgamalla.pdf" type="application/pdf" width="100%" height="100%"/>
 
 		</div>
 	</center>
